k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: ticketing
  labels:
    app: ticket-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: ticket-service
